--- a/app/buildspec.yml
+++ b/app/buildspec.yml
@@ -20,7 +20,7 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - aws ecs update-service --cluster ama-cluster --service ama-service --force-new-deployment
+      - aws ecs update-service --cluster codepipeline-demo-cluster --service codepipeline-demo-service --force-new-deployment
 
 artifacts:
   files:
