Updated gitignore to reflect more tools, added license file, minor change to add newline to response from app.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /infra/node_modules
 /infra/node_modules-x
 /infra/cdk.out/
+.DS_Store
+*.log
+config.json
+.idea
+.envrc
+.vscode
+venv
+.swp
+find
